<resources>
    <string name="app_name">CodigoCodeTest</string>
    <string name="login_desc">Sign up with Facebook for the mose fulfilling trip planning experience with us!</string>
    <string name="login_title">Welcome to\nReady To Travel</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_email">Login with email address</string>
    <string name="create_account">Create a new account</string>
    <string name="almost_there">Almost there!</string>
    <string name="account_create_desc">Complete the form below to create your Ready To Travel account.</string>
    <string name="mandatory">*Mandatory</string>
    <string name="lbl_first_name">First Name <font color='#7F8188'>*</font></string>
    <string name="lbl_last_name">Last Name <font color='#7F8188'>*</font></string>
    <string name="lbl_email_address">Email Address <font color='#7F8188'>*</font></string>
    <string name="lbl_date_of_birth">Date of Birth <font color='#7F8188'>*</font></string>
    <string name="lbl_nationality">Nationality <font color='#7F8188'>*</font></string>
    <string name="lbl_country_of_residence">Country of Residence <font color='#7F8188'>*</font></string>
    <string name="lbl_mobile_number">Mobile no. (Optional)</string>
    <string name="lbl_code">Code</string>
    <string name="lbl_mobile_no">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_ok">Ok</string>
    <string name="account_create_success">Successful</string>
    <string name="account_create_success_desc">You have successfully created your account. Thank you!</string>
    <string name="by_room">By Room</string>
    <string name="by_rate">Rates</string>
    <string name="str_upcoming_movies">Upcoming Movies</string>
    <string name="str_popular_movies">Popular Movies</string>
    <string name="str_release_date">Release Date</string>
    <string name="str_rating">Rating</string>
    <string name="str_overview">Overview</string>
    <string name="sample_overview">In the 22nd century, a paraplegic Marine is dispatched to the
        moon Pandora on a unique mission, but becomes torn between following orders and protecting
        an alien civilization.</string>
    <string name="str_watch_movies">Watch Movies</string>
    <string name="str_smth_went_wrong">Something went wrong.</string>

</resources>