<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:focusable="true"
                android:importantForAccessibility="no"
                android:src="@drawable/baseline_arrow_back_24" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/str_watch_movies"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/str_upcoming_movies"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upcoming_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:itemCount="1"
                tools:listitem="@layout/upcoming_movie_list_item" />

            <TextView
                android:id="@+id/tv_upcoming_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_smth_went_wrong"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/upcoming_progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/custom_progress_bar"
                />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/str_popular_movies"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/popular_movie_list_item" />

            <TextView
                android:id="@+id/tv_popular_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_smth_went_wrong"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/popular_progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/custom_progress_bar"
                />
        </FrameLayout>

    </LinearLayout>
</layout>