<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="movie"
            type="com.codigo.codetest.code.data.source.movie.Movie" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:elevation="4dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleGravity="top|left"
                app:expandedTitleTextAppearance="@style/CollapsedExpandedTitleText"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/movie_detail_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"
                    app:imageUrl="@{movie.image}"
                    app:layout_collapseMode="parallax" />


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/movie_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:titleTextAppearance="@style/Toolbar.TitleText">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/backBtn_Detail"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentStart="true"
                            android:src="@drawable/ic_baseline_arrow_back_24" />


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvToolTitle_Detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="25dp"
                            android:layout_toEndOf="@id/backBtn_Detail"
                            android:textColor="@color/white"
                            android:textSize="@dimen/txt_size_ex_large"
                            tools:text="Avatar" />
                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="6dp"
                android:paddingEnd="15dp"
                android:paddingBottom="6dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:gravity="center">
                   <com.google.android.material.textview.MaterialTextView
                       android:id="@+id/tvTitle_MovieDetail"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:ellipsize="marquee"
                       android:maxLines="1"
                       android:singleLine="true"
                       android:text="@{movie.title}"
                       android:textColor="@color/colorPrimary"
                       android:textSize="@dimen/txt_size_ex_ex_ex_large"
                       android:textStyle="bold"
                       tools:text="Avatar" />

                   <ImageView
                       android:id="@+id/img_favorite"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:layout_marginStart="8dp"
                       android:background="?attr/selectableItemBackgroundBorderless"
                       android:clickable="true"
                       android:focusable="true"
                       android:padding="4dp"
                       android:src="@{movie.isFavorite ? @drawable/ic_rating : @drawable/ic_rating_outlined}"
                       app:tint="@color/color_favorite" />
               </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="2dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="center_horizontal"
                        android:ellipsize="marquee"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/str_release_date"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/txt_size_large" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:ellipsize="marquee"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/str_rating"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/txt_size_large" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:paddingBottom="4dp"
                    android:layout_gravity="center_vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvDate_MovieDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:ellipsize="marquee"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{movie.releaseDate}"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/txt_size_large"
                        tools:text="Dec 15 2009" />

                    <TextView
                        android:id="@+id/ratingCountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_horizontal"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@{Double.toString(movie.voteAverage)}"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_rating"
                        app:drawableTint="@color/gold"
                        tools:text="8.5" />


                </RelativeLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="marquee"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:singleLine="true"
                    android:text="@string/str_overview"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/txt_size_ex_large" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvOverview_MovieDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:ellipsize="marquee"
                    android:lineSpacingMultiplier="1.1"
                    android:text="@{movie.overview}"
                    tools:text="@string/sample_overview" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>